fix for page header z-index when transitioning

--- a/src/assets/_scss/layout/_page_header.scss
+++ b/src/assets/_scss/layout/_page_header.scss
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   background-color: $white;
-  z-index: 1000;
+  z-index: 998;
 }
 
 #mainnav {
